tests/ValidProofs/eqE.fitch
|P(x)
|x = t
|---
|P(t) (=E) 1,2