tests/InvalidRules/implI%3.fitch
|---
||P(x)
||---
||P(x) (R) 1
|P(x) (→I) 1-2
